--- a/index.html
+++ b/index.html
@@ -6,5 +6,75 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <header id="showcase" class="grid">
+      <div class="bg-image"></div>
+      <h1>katherine thongsakounh</h1>
+      <p>lorem ipsum</p>
+      <a href="#section-b" class="btn">read more</a>
+    </header>
+
+    <main id="main">
+      <section id="section-a" class="grid">
+        <div class="content-wrap">
+          <h2 class="content-title">Web & Application Dev</h2>
+          <p>lorem ipsum</p>
+        </div>
+      </section>
+
+      <section id="section-b" class="grid">
+        <ul>
+          <li>
+            <div class="card">
+              <img src="coding.jpg" alt="coding">
+              <div class="card-content">
+                <h3 class="card-title">web dev</h3>
+                <p>lorem ipsum</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <img src="mobile.jpeg" alt="mobile">
+              <div class="card-content">
+                <h3 class="card-title">mobile</h3>
+                <p>lorem ipsum</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="card">
+              <img src="data.jpeg" alt="data">
+              <div class="card-content">
+                <h3 class="card-title">data</h3>
+                <p>lorem ipsum</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section id="section-c" class="grid">
+        <div class="content-wrap">
+          <h2 class="content-title">we handle all of your digital needs</h2>
+          <p>lorem ipsum</p>
+        </div>
+      </section>
+
+      <section id="section-d">
+        <div class="box">
+          <h2 class="content-title">contact</h2>
+          <p>lorem ipsum</p>
+        </div>
+        <div class="box">
+          <h2 class="content-title">about</h2>
+          <p>info goes here</p>
+        </div>
+      </section>
+    </main>
+
+    <footer id="main-footer" class="grid">
+      <div>katherine thongsakounh</div>
+      <div>project by <a href="https://github.com/kthong3" target="_blank">katherine thongsakounh</a></div>
+    </footer>
   </body>
 </html>
