--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <body>
     <header id="showcase" class="grid">
       <div class="bg-image"></div>
-      <h1>katherine thongsakounh</h1>
-      <p>lorem ipsum</p>
-      <a href="#section-b" class="btn">read more</a>
+      <div class="content-wrap">
+        <h1>katherine thongsakounh</h1>
+        <p>software developer</p>
+        <a href="#section-b" class="btn">read more</a>
+      </div>
     </header>
 
     <main id="main">
@@ -63,7 +65,7 @@
       <section id="section-d">
         <div class="box">
           <h2 class="content-title">contact</h2>
-          <p>lorem ipsum</p>
+          <p>contact information <a href="contact">here</a></p>
         </div>
         <div class="box">
           <h2 class="content-title">about</h2>
