add media query

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <section id="section-a" class="grid">
         <div class="content-wrap">
           <h2 class="content-title">Web & Application Dev</h2>
-          <p>lorem ipsum</p>
+          <div class="content-text">
+            <p>lorem ipsum paragraph</p>
+          </div>
         </div>
       </section>
 
@@ -62,7 +64,7 @@
         </div>
       </section>
 
-      <section id="section-d">
+      <section id="section-d" class="grid">
         <div class="box">
           <h2 class="content-title">contact</h2>
           <p>contact information <a href="contact">here</a></p>
